[package]
name = "conveyance"
version = "0.1.0"
description = "A stop-gap CLI for conveyancing."
license = ""
repository = "https://github.com/OliverBrotchie/conveyance-cli"
keywords = ["word", "docx","xml"]
categories = ["command-line-utilities","text-processing"]
authors = ["Oliver Brotchie <o.brotchie@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
quick-xml = "0.22.0"
zip = "0.5.13"
serde_json = "1.0.64"

[profile.release]
lto = true
panic = "abort"